home and review

--- a/src/app/modules/developer/Components/contact-us/contact-us.component.html
+++ b/src/app/modules/developer/Components/contact-us/contact-us.component.html
@@ -10,37 +10,39 @@
 
 
           <div class="container">
-            <form [formGroup]="form" class="pt-4">
+            <form [formGroup]="form" class="pt-4" (ngSubmit)="send()">
 
 
               <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
-                <input formControlName="email" type="email" class="form-control" id="email" aria-describedby="emailHelp"
-                  (blur)="onBlur('email')" [ngClass]="{
-                                  'is-valid': form.controls['email'].valid && form.controls['email'].touched,
-                                  'is-invalid': form.controls['email'].invalid && form.controls['email'].touched
+                <input formControlName="Email" type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                  (blur)="onBlur('Email')" [ngClass]="{
+                                  'is-valid': form.controls['Email'].valid && form.controls['Email'].touched,
+                                  'is-invalid': form.controls['Email'].invalid && form.controls['Email'].touched
                                 }">
+                                <!-- <input formControlName="Email" type="email" class="form-control" id="email" aria-describedby="emailHelp"> -->
                 <div class="valid-feedback">
                   Looks good!
                 </div>
                 <div class="invalid-feedback">
-                  @if (form.controls['email'].hasError('required')) {
+                  @if (form.controls['Email'].hasError('required')) {
                   <span>Please provide a valid email.</span>
                   }
-                  @if (form.controls['email'].hasError('email')) {
+                  @if (form.controls['Email'].hasError('Email')) {
                   <span>Email must be in the format: user&commat;example.com.</span>
                   }
                 </div>
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-              </div>
+              </div> 
 
               <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input formControlName="username" type="text" class="form-control" (blur)="onBlur('username')"
+                <input formControlName="Username" type="text" class="form-control" (blur)="onBlur('Username')"
                   [ngClass]="{
-                                  'is-valid': form.controls['username'].valid && form.controls['username'].touched,
-                                  'is-invalid': form.controls['username'].invalid && form.controls['username'].touched
+                                  'is-valid': form.controls['Username'].valid && form.controls['Username'].touched,
+                                  'is-invalid': form.controls['Username'].invalid && form.controls['Username'].touched
                                 }">
+                                <!-- <input formControlName="Username" type="text" class="form-control" > -->
                 <div class="valid-feedback">
                   Looks good!
                 </div>
@@ -48,44 +50,32 @@
                   Username must be between 3 to 20 characters long and contain only letters, numbers, underscores, and
                   hyphens.
                 </div>
-              </div>
-              <!-- <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input formControlName="password" type="password" class="form-control" id="password"
-                  (blur)="onBlur('password')" [ngClass]="{
-                                  'is-valid': form.controls['password'].valid && form.controls['password'].touched,
-                                  'is-invalid': form.controls['password'].invalid && form.controls['password'].touched
-                                }">
-                <div class="valid-feedback">
-                  Looks good!
-                </div>
-                <div class="invalid-feedback">
-                  Password must contain at least 8 characters, including uppercase, lowercase, number, and special
-                  character.
-                </div>
-              </div> -->
+              </div> 
+
               <div class="mb-3">
                 <label for="phonenumber" class="form-label">Phone Number</label>
-                <input formControlName="phonenumber" type="text" class="form-control" (blur)="onBlur('phonenumber')"
+                <input formControlName="PhoneNumber" type="text" class="form-control" (blur)="onBlur('PhoneNumber')"
                   [ngClass]="{
-                                  'is-valid': form.controls['phonenumber'].valid && form.controls['phonenumber'].touched,
-                                  'is-invalid': form.controls['phonenumber'].invalid && form.controls['phonenumber'].touched
+                                  'is-valid': form.controls['PhoneNumber'].valid && form.controls['PhoneNumber'].touched,
+                                  'is-invalid': form.controls['PhoneNumber'].invalid && form.controls['PhoneNumber'].touched
                                 }">
+                                <!-- <input formControlName="PhoneNumber" type="text" class="form-control" > -->
                 <div class="valid-feedback">
                   Looks good!
                 </div>
                 <div class="invalid-feedback">
-                  Phone number must contain exactly 10 digits.
+                  Phone number must contain exactly 11 digits.
                 </div>
-              </div>
+              </div> 
 
 
               <div class="mb-3">
                 <label for="name" class="form-label">Object of complain</label>
-                <input formControlName="name" type="text" class="form-control" (blur)="onBlur('name')" [ngClass]="{
-                                  'is-valid': form.controls['name'].valid && form.controls['name'].touched,
-                                  'is-invalid': form.controls['name'].invalid && form.controls['name'].touched
+                <input formControlName="ObjectOfComplain" type="text" class="form-control" (blur)="onBlur('ObjectOfComplain')" [ngClass]="{
+                                  'is-valid': form.controls['ObjectOfComplain'].valid && form.controls['ObjectOfComplain'].touched,
+                                  'is-invalid': form.controls['ObjectOfComplain'].invalid && form.controls['ObjectOfComplain'].touched
                                 }">
+                                <!-- <input formControlName="ObjectOfComplain" type="text" class="form-control" > -->
                 <div class="valid-feedback">
                   Looks good!
                 </div>
@@ -94,10 +84,10 @@
                 </div>
               </div>
               <div class="mb-4">
-                <textarea class="form-control bg-transparent" placeholder="Message" style="height: 100px"></textarea>
+                <textarea  formControlName="Message" class="form-control bg-transparent" placeholder="Message" style="height: 100px"></textarea>
               </div>
 
-              <button class="btn btn-lg btn-primary mb-0" [disabled]="form.invalid">Send a message</button>
+              <button class="btn btn-lg btn-primary mb-0" type="submit"  [disabled]="form.invalid">Send a message</button>
             </form>
           </div>
 
