--- a/src/app/modules/developer/Components/query/query.component.html
+++ b/src/app/modules/developer/Components/query/query.component.html
@@ -96,7 +96,7 @@
           </div>
           <!-- </div> -->
         </div>}
-        @else{
+        <!-- @else{
         <div class="d-flex align-items-center mt-1 p-1">
           <img src="" alt="Harshad Sawant" class="rounded-circle mr-3" width="60">
           <div class="p-3">
@@ -108,7 +108,7 @@
             <a href="#" class="btn btn-light"><i class="fa-solid fa-share"></i></a>
           </div>
         </div>
-        }
+        } -->
       </div>
     </div>
 
