list session developer

--- a/src/app/modules/developer/Components/profile-layout/profile-layout.component.html
+++ b/src/app/modules/developer/Components/profile-layout/profile-layout.component.html
@@ -5,7 +5,7 @@
     <div class="col-xl-1 col-lg-2 col-md-2 d-none d-md-block">
     <!-- <div class="col d-none d-md-block" style="flex: 0 0 20%;"> -->
 
-      <app-profile-side-bar class="p-0 m-0"></app-profile-side-bar> <!-- Sidebar remains for larger screens and tablets -->
+      <app-profile-side-bar class="p-0 m-0 "></app-profile-side-bar> <!-- Sidebar remains for larger screens and tablets -->
     </div>
 
     <!-- Mobile Navbar (visible on smaller screens, including tablets in collapse mode) -->
@@ -62,7 +62,7 @@
 
     <!-- Main Content -->
   
-    <div class="col-lg-8 col-xl-9 col-md-6 ">
+    <div class="col-lg-8 col-xl-9 col-md-8 custom-margins" >
       <!-- <div class="col" style="flex: 0 0 80%;"> -->
       <div >
       <router-outlet></router-outlet>
