--- a/src/app/shared/components/changepassword/changepassword.component.css
+++ b/src/app/shared/components/changepassword/changepassword.component.css
@@ -1,8 +1,9 @@
 .container {
+  margin-top: 50px;
   background-size: cover; /* Make the background image cover the entire container */
   background-position: center; /* Center the background image */
   background-repeat: no-repeat; /* Prevent the background image from repeating */
-  height: 100vh; /* Full viewport height */
+  /* height: 100vh; Full viewport height */
   display: flex;
   justify-content: center; /* Center items horizontally */
   align-items: center; /* Center items vertically */
