--- a/src/app/modules/developer/Components/profile-layout/profile-layout.component.css
+++ b/src/app/modules/developer/Components/profile-layout/profile-layout.component.css
@@ -143,3 +143,18 @@
 .home-btn:hover {
   background-color: rgb(0, 0, 0); /* Darken the background on hover */
 }
+.custom-margins{
+  margin-left: 90px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+@media (min-width: 768px) and (max-width: 995px) {
+  .custom-margins{
+    margin-left: 100px !important;
+  }
+}
+@media (max-width: 767px) {
+  .custom-margins{
+    margin-left: auto !important;
+  }
+}
