--- a/src/app/modules/mentor/components/mentorlayout/mentorlayout.component.html
+++ b/src/app/modules/mentor/components/mentorlayout/mentorlayout.component.html
@@ -20,7 +20,7 @@
 
       <!-- Profile Image (aligned right) -->
       <div class="navbar-profile ml-auto">
-        <img src="01.jpg" alt="Profile Image" class="profile-image rounded-circle"
+        <img src="http://localhost:5164/{{userImageUrl}}" alt="Profile Image" class="profile-image rounded-circle"
           style="width: 40px; height: 40px;">
       </div>
 
