--- a/src/app/modules/mentor/components/sidebarlayout/sidebarlayout.component.html
+++ b/src/app/modules/mentor/components/sidebarlayout/sidebarlayout.component.html
@@ -1,14 +1,8 @@
 <nav class="sidebar">
   <div class="profile-section">
-    <img [src]="profile.imageUrl" alt="Profile Image" class="profile-image" />
-    <h3>{{ profile.name }}</h3>
-    <p>{{ profile.email }}</p>
-    <div class="progress-bar-wrapper">
-      <div class="progress-bar">
-        <div class="progress" [style.width.%]="profile.profileCompletion"></div>
-      </div>
-      <span class="progress-percentage">{{ profile.profileCompletion }}%</span>
-    </div>
+    <img src="http://localhost:5164/{{userImageUrl}}" alt="Profile Image" class="profile-image" />
+    <h3>Welcome {{ userName || 'User' }}</h3>
+    <h3>Development Mentor</h3>
   </div>
 
   <ul>
