--- a/src/app/shared/components/step-one/step-one.component.css
+++ b/src/app/shared/components/step-one/step-one.component.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 .container-fluid {
-  background-image: url('../../../../../../public/guide.jpg');
+  background-image: url(/public/guide.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
