--- a/src/app/modules/mentor/Components/booking-mentor/booking.component.css
+++ b/src/app/modules/mentor/Components/booking-mentor/booking.component.css
@@ -121,7 +121,7 @@
   --fc-bg-opacity: 1;
 --fc-bg-opacity: 1;
   background-color: #198754 !important;
-};
+}
 .card {
   --bs-card-spacer-y: 1.25rem;
   --bs-card-spacer-x: 1.25rem;
