--- a/src/app/modules/developer/Components/developer-session-details/developer-session-details.component.css
+++ b/src/app/modules/developer/Components/developer-session-details/developer-session-details.component.css
@@ -18,3 +18,12 @@ color: rgb(70, 70, 250);
     background-color: rgb(163, 233, 130);
     color: rgb(22, 94, 12);
 }
+.star {
+    font-size: 24px;
+    color: lightgray;
+    cursor: pointer;
+  }
+  
+  .star.filled {
+    color: gold;
+  }
