--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -9,102 +9,102 @@
         <div class="card login-card shadow-sm">
           <div class="card-body">
             <img src="logo 1.jpg" class="card-image">
-            <h3 class="text-center mb-4" style="font-family: Edu AU VIC WA NT Hand, cursive;font-optical-sizing: auto;font-style: normal;">Sign up</h3>
+            <h3 class="text-center mb-4"
+              style="font-family: Edu AU VIC WA NT Hand, cursive;font-optical-sizing: auto;font-style: normal;">Sign up
+            </h3>
 
 
 
 
-<div class="">
-  <div class="signup-form">
-    <!-- <h2 class="text-center">Sign up</h2> -->
-    <form [formGroup]="form" (ngSubmit)="send()">
-      <div class="form-group" style="margin-bottom: 20px !important;">
-        <h2 class=" m-0 p-0">Your Role</h2>
-        <button type="button" (click)="setRole('Developer')">Developer</button>
-        <button type="button" (click)="setRole('HR')"> HR</button>
-        <button type="button" (click)="setRole('Mentor')">Mentor</button>
-<<<<<<< HEAD
-=======
+            <div class="">
+              <div class="signup-form">
+                <!-- <h2 class="text-center">Sign up</h2> -->
+                <form [formGroup]="form" (ngSubmit)="send()">
+                  <div class="form-group" style="margin-bottom: 20px !important;">
+                    <h2 class=" m-0 p-0">Your Role</h2>
+                    <button type="button" (click)="setRole('Developer')">Developer</button>
+                    <button type="button" (click)="setRole('HR')"> HR</button>
+                    <button type="button" (click)="setRole('Mentor')">Mentor</button>
 
->>>>>>> master
-      </div>
-      <div class="form-group">
-        <label for="email">Email address</label>
-        <input formControlName="Email" type="email" class="form-control" [ngClass]="{
+
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Email address</label>
+                    <input formControlName="Email" type="email" class="form-control" [ngClass]="{
             'is-valid': form.controls['Email'].valid,
             'is-invalid': form.controls['Email'].invalid && form.controls['Email'].dirty
             }">
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-        <div class="invalid-feedback">
-          <!-- Please Email Like : Admin&commat;gmail.com . -->
-          @if(form.controls['Email'].hasError("required")){
-          <span>Please Provide Valid Email</span>
-          }
-          @else if(form.controls['Email'].hasError("Email")) {
-          <span>Email must have letter &commat;</span>
-          }
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="FirstName">First Name</label>
-        <input formControlName="FirstName" type="text" class="form-control" [ngClass]="{
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      <!-- Please Email Like : Admin&commat;gmail.com . -->
+                      @if(form.controls['Email'].hasError("required")){
+                      <span>Please Provide Valid Email</span>
+                      }
+                      @else if(form.controls['Email'].hasError("Email")) {
+                      <span>Email must have letter &commat;</span>
+                      }
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="FirstName">First Name</label>
+                    <input formControlName="FirstName" type="text" class="form-control" [ngClass]="{
             'is-valid': form.controls['FirstName'].valid,
             'is-invalid': form.controls['FirstName'].invalid && form.controls['FirstName'].dirty
           }">
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-        <div class="invalid-feedback">
-          <!-- Please Email Like : Admin&commat;gmail.com . -->
-          @if(form.controls['FirstName'].hasError("required")){
-          <span>Please Provide Valid Name</span>
-          }
-          @else if(form.controls['FirstName'].hasError("minLength")){
-          <span> Name must have 20 Letter atleast.</span>
-          }
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="LastName">Last Name</label>
-        <input formControlName="LastName" type="text" class="form-control" [ngClass]="{
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      <!-- Please Email Like : Admin&commat;gmail.com . -->
+                      @if(form.controls['FirstName'].hasError("required")){
+                      <span>Please Provide Valid Name</span>
+                      }
+                      @else if(form.controls['FirstName'].hasError("minLength")){
+                      <span> Name must have 20 Letter atleast.</span>
+                      }
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="LastName">Last Name</label>
+                    <input formControlName="LastName" type="text" class="form-control" [ngClass]="{
             'is-valid': form.controls['LastName'].valid,
             'is-invalid': form.controls['LastName'].invalid && form.controls['LastName'].dirty
           }">
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-        <div class="invalid-feedback">
-          <!-- Please Email Like : Admin&commat;gmail.com . -->
-          @if(form.controls['LastName'].hasError("required")){
-          <span>Please Provide Valid Name</span>
-          }
-          @else if(form.controls['LastName'].hasError("minLength")){
-          <span> Name must have 20 Letter atleast.</span>
-          }
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="UserName">UserName</label>
-        <input formControlName="UserName" type="text" class="form-control" [ngClass]="{
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      <!-- Please Email Like : Admin&commat;gmail.com . -->
+                      @if(form.controls['LastName'].hasError("required")){
+                      <span>Please Provide Valid Name</span>
+                      }
+                      @else if(form.controls['LastName'].hasError("minLength")){
+                      <span> Name must have 20 Letter atleast.</span>
+                      }
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="UserName">UserName</label>
+                    <input formControlName="UserName" type="text" class="form-control" [ngClass]="{
             'is-valid': form.controls['UserName'].valid,
             'is-invalid': form.controls['UserName'].invalid && form.controls['UserName'].dirty
           }">
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-        <div class="invalid-feedback">
-          @if(form.controls['UserName'].hasError("required")){
-          <span>Please Provide Valid UserName</span>
-          }
-          @else{
-          <span>Please Provide Valid User Name at least 8 characters Without Spaces</span>
-          }
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      @if(form.controls['UserName'].hasError("required")){
+                      <span>Please Provide Valid UserName</span>
+                      }
+                      @else{
+                      <span>Please Provide Valid User Name at least 8 characters Without Spaces</span>
+                      }
 
-        </div>
-      </div>
-      <!-- <div class="form-group">
+                    </div>
+                  </div>
+                  <!-- <div class="form-group">
         <label for="phonenumber">Phone Number</label>
         <input formControlName="phonenumber" type="text" class="form-control" [ngClass]="{
             'is-valid': form.controls['phonenumber'].valid,
@@ -117,53 +117,57 @@
           <span>Please Provide Valid Phone Number contains 11 number</span>
         </div>
       </div> -->
-      <div class="form-group">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input formControlName="Password" type="Password" class="form-control" [ngClass]="{
+                  <div class="form-group">
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <input formControlName="Password" type="Password" class="form-control" [ngClass]="{
             'is-valid': form.controls['Password'].valid,
             'is-invalid': form.controls['Password'].invalid && form.controls['Password'].dirty
             }">
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-        <div class="invalid-feedback">
-          Please Password contains 8 letters atlest and has Lower case and upper case and number and spical caracter.
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
-        <input formControlName="ConfirmPassword" type="password" class="form-control" [ngClass]="{
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      Please Password contains 8 letters atlest and has Lower case and upper case and number and spical
+                      caracter.
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
+                    <input formControlName="ConfirmPassword" type="password" class="form-control" [ngClass]="{
             'is-valid': form.controls['ConfirmPassword'].valid,
             'is-invalid': form.controls['ConfirmPassword'].invalid && form.controls['ConfirmPassword'].dirty
             }">
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-        <div class="invalid-feedback">
-          Please Password contains 8 letters atlest and has Lower case and upper case and number and spical caracter.
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      Please Password contains 8 letters atlest and has Lower case and upper case and number and spical
+                      caracter.
+                    </div>
+                  </div>
+
+
+                  <form class="form-group">
+                    <h2 class=" m-0 p-0">Your Role</h2>
+                    <button type="button" (click)="setRole('Developer')">Developer</button>
+                    <button type="button" (click)="setRole('HR')"> HR</button>
+                    <button type="button" (click)="setRole('Mentor')">Mentor</button>
+                  </form>
+
+                  <button type="submit" [disabled]="form.invalid"
+                    class="form-group mt-4 ps-4 btn btn-primary btn-block ms-4 text-center justify-content-center">Sign
+                    Up</button>
+
+                  <p class="text-center mt-3">
+                    Already have an account?
+                    <a routerLink="/developer/login">login</a>
+                  </p>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-
-
-      <form class="form-group" >
-        <h2 class=" m-0 p-0">Your Role</h2>
-        <button type="button" (click)="setRole('Developer')">Developer</button>
-        <button type="button" (click)="setRole('HR')"> HR</button>
-        <button type="button" (click)="setRole('Mentor')">Mentor</button>
-     </form>
-
-      <button type="submit" [disabled]="form.invalid" class="form-group mt-4 ps-4 btn btn-primary btn-block ms-4 text-center justify-content-center">Sign Up</button>
-
-      <p class="text-center mt-3">
-        Already have an account?
-        <a routerLink="/developer/login">login</a>
-      </p>
-    </form>
+    </div>
   </div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
 </div>
